# course-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  flake.nix
src/: bot.rs  config.rs  crawler.rs  main.rs
