[package]
name = "course-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
envconfig = "0.11.0"
infer = "0.16.0"
kv = { version = "0.24.0", features = ["compression", "msgpack-value"] }
log = "0.4.22"
poise = "0.6.1"
regex = "1.11.1"
reqwest = { version = "0.12.11", features = ["json"] }
reqwest_cookie_store = "0.8.0"
serde = "1.0.217"
serde_json = "1.0.134"
serenity = "0.12"
thiserror = "2.0.9"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
